tests/sema/fail/v41_fail_unit_sum_mixed_members.ep
# COMPILE_FAIL_CONTAINS: sum type Token cannot mix product members and unit variants
type EOF {}
type Token = EOF | ID

fun main(): void {}
